--- a/www/text.html
+++ b/www/text.html
@@ -19,8 +19,8 @@
 </head>
 <body>
     <a onclick="con()">迴圈切換內容</a>
-    <div >213</div>
-    <div >12354</div>
+    <div class="tec" >213</div>
+    <div class="tec" >12354</div>
     <p>11111</p>
     <p>22222</p>
     <p>33333</p>
@@ -28,10 +28,11 @@
     //可以換成切換圖片等等
     flag = 0;
     pre = 0;
-    function con(){
-      var cons = document.getElementsByTagName("div");
-      document.getElementsByTagName("div")[pre].style.display = "none";
-      document.getElementsByTagName("div")[flag].style.display = "inline";
+        function con() {
+       
+            var cons = document.getElementsByClassName("tec");
+            document.getElementsByClassName("tec")[pre].style.display = "none";
+            document.getElementsByClassName("tec")[flag].style.display = "inline";
       console.log(flag);
       pre = flag;
       if(flag == cons.length - 1) { //注意是cons.length-1，因為索引值是從0開始的
